      'default_column' included the table name (or 'me.') failed.

    - get_* (fields, elements, constraints, etc) now accept any valid method
      as a search parameter rather than a limited subset.

    - add default_natural() to Date element, allowing the use of 
      DateTime::Format::Natural to parse dates such as "today" or "yesterday."

0.02004 2008-02-22

    - Incompatible Change: $upload->headers no longer returns a hashref, it now
      returns a HTTP::Headers object.
      Tests for $upload->headers->{'Content-Type'} changed to 
      $upload->headers->content_type.
      Tests for $upload->headers->{'Content-Length'} changed to 
      $upload->headers->content_length.
    
    - Catalyst upload object now provides basename(), copy_to(), link_to(), 
      size(), tempname() and type() methods which delegate to the 
      Catalyst::Request::Upload object.
    
    - The original Catalyst::Request::Upload objects can be retrived with the 
      catalyst_upload() method.
    
    - CGI and CGI::Simple upload objects provide size() and type() methods.
    
    - New Constraints: File::Size, File::MIME and File.
    
    - 'Required' and other constraints now work with file uploads.
    
    - Spanish I18N added.
    
    - Support for DBIx::Class schema methods which don't correspond to a 
      database column or relationship.
    
    - Fixed test failures due to hardcoded date element output expecting the
      year 2007.
    
    - Fixed circular references in upload objects.

0.02003 2007-12-20

    - Bugfix for has-many rels in defaults_from_model()
    
    - Added Template.pm back into prereqs
    
    - Repeatable element, increment_field_names() is now true by default
    
    - Fixed javascript rendering in _Field

0.02002 2007-12-12

    - Fixes required for perl 5.10.0

0.02001 2007-12-12

    - Bugfix for save_to_model() in HTML::FormFu::Model::DBIC

0.02000 2007-12-12
